--- a/app/views/trainings/edit.html.erb
+++ b/app/views/trainings/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing product</h1>
+<h1>Editing training</h1>
 
-<% form_for(@product) do |f| %>
+<% form_for(@training) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,5 +16,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Show', @training %> |
+<%= link_to 'Back', trainings_path %>
