--- a/app/views/trainings/new.html.erb
+++ b/app/views/trainings/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New product</h1>
+<h1>New training</h1>
 
-<% form_for(@product) do |f| %>
+<% form_for(@training) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', products_path %>
+<%= link_to 'Back', trainings_path %>
