--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>Ruby on Rails: Welcome aboard</title>
+    <title>Training company system</title>
     <style type="text/css" media="screen">
       body {
         margin: 0;
@@ -201,35 +201,27 @@
         }
       }
     </script>
+  <%= stylesheet_link_tag 'scaffold' %>
   </head>
   <body>
     <div id="page">
       <div id="sidebar">
         <ul id="sidebar-items">
-          <li>
-            <form id="search" action="http://www.google.com/search" method="get">
-              <input type="hidden" name="hl" value="en" />
-              <input type="text" id="search-text" name="q" value="site:rubyonrails.org " />
-              <input type="submit" value="Search" /> the Rails site
-            </form>
-          </li>
         
           <li>
-            <h3>Join the community</h3>
+            <h3>Navigation</h3>
             <ul class="links">
-              <li><a href="http://www.rubyonrails.org/">Ruby on Rails</a></li>
-              <li><a href="http://weblog.rubyonrails.org/">Official weblog</a></li>
-              <li><a href="http://wiki.rubyonrails.org/">Wiki</a></li>
+              <li><%= link_to "Training system", :controller=>:trainings %></li>
+              <li><%= link_to "Order system", :controller=>:orders %></li>
             </ul>
           </li>
           
           <li>
-            <h3>Browse the documentation</h3>
+            <h3>Project information</h3>
             <ul class="links">
-              <li><a href="http://api.rubyonrails.org/">Rails API</a></li>
-              <li><a href="http://stdlib.rubyonrails.org/">Ruby standard library</a></li>
-              <li><a href="http://corelib.rubyonrails.org/">Ruby core</a></li>
-              <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
+              <li><a href="http://www.github.com/caelum/restfulie">Restfulie website</a></li>
+              <li><a href="http://groups.google.com/group/restfulie">Mailing list</a></li>
+              <li><a href="http://www.caelum.com.br/">Caelum</a></li>
             </ul>
           </li>
         </ul>
@@ -238,34 +230,15 @@
       <div id="content">
         <div id="header">
           <h1>Welcome aboard</h1>
-          <h2>You&rsquo;re riding Ruby on Rails!</h2>
+          <h2>You&rsquo;re riding Restfulie on Rails!</h2>
         </div>
 
-        <div id="about">
-          <h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
-          <div id="about-content" style="display: none"></div>
-        </div>
-        
         <div id="getting-started">
-          <h1>Getting started</h1>
-          <h2>Here&rsquo;s how to get rolling:</h2>
-          
-          <ol>          
-            <li>
-              <h2>Use <tt>script/generate</tt> to create your models and controllers</h2>
-              <p>To see all available options, run it without parameters.</p>
-            </li>
-            
-            <li>
-              <h2>Set up a default route and remove or rename this file</h2>
-              <p>Routes are set up in config/routes.rb.</p>
-            </li>
 
-            <li>
-              <h2>Create your database</h2>
-              <p>Run <tt>rake db:migrate</tt> to create your database. If you're not using SQLite (the default), edit <tt>config/database.yml</tt> with your username and password.</p>
-            </li>
-          </ol>
+<p style="color: green"><%= flash[:notice] %></p>
+
+<%= yield %>
+
         </div>
       </div>
       
