ability to check payments

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,7 +8,7 @@
 <% @orders.each do |order| %>
   <tr>
     <td><%= link_to order.customer_name, order %></td>
-	<td><%= order_url(order) %>.xml</td>
+	<td><a href="<%= order_url(order) %>.xml"><%= order_url(order) %>.xml</a></td>
 	<% if order.can_cancel? %>
 		<td><%= link_to 'cancel', order, :confirm => 'Are you sure?', :method => :delete %></td>
 	<% elsif order.status =="cancelled" %>
