--- a/app/views/welcome/welcome.html.erb
+++ b/app/views/welcome/welcome.html.erb
@@ -5,12 +5,12 @@
           <ol>          
             <li>
               <h2>Create a few trainings</h2>
-              <p>Those are the trainings that you can order later.</p>
+              <p><%= link_to "Those are the trainings", :controller=>:trainings %> that you can order later.</p>
             </li>
             
             <li>
               <h2>Send an order</h2>
-              <p>Use the order system to send (post) your order.</p>
+              <p><%= link_to "Use the order system", :controller=>:orders %> to send (post) your order.</p>
             </li>
 
             <li>
